<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="50dp"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/tvTitleNoNet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/oop"
            android:textColor="#7B1FA2"
            android:textSize="30sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/no_net_found"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/page_not_found"
            android:textColor="#D81B1B"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieNoNet"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="100dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_internet"
            app:lottie_repeatMode="restart" />

        <Button
            android:id="@+id/tryBn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@drawable/internet_bn"
            android:gravity="center"
            android:text="@string/refresh"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>