<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:orientation="vertical"
            tools:ignore="VisualLintBounds">

            <LinearLayout
                android:layout_width="600dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:orientation="horizontal"
                android:weightSum="6"
                tools:ignore="UselessParent">
                <!--=====================================================-->

                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_action"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:paddingBottom="9dp"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/action" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:text="@string/action"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_sports"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:paddingTop="40dp"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/sports"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:text="@string/sports"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_puzzle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/puzzle"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3.8dp"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:text="@string/puzzle"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_racing"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="7dp"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/racing" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:text="@string/racing"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_education"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="5dp"
                            android:padding="17dp"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/educational"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:text="@string/education"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cat_arcade"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="@drawable/click_effects"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:scaleType="centerCrop"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/arcade" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:letterSpacing=".15"
                            android:padding="4dp"
                            android:text="@string/arcade"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <!--==============================================-->
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

</ScrollView>